/**
 * Copyright (C) 2018 Nordstrom, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nordstrom.gtm.apikey";
option java_outer_classname = "ApiKeyModelsProto";

package nordstrom.gtm.apikey;

message KeyListRequest {
    string service_name = 1;
    string team_name = 2; // OU
}

message KeyRequest {
    string service_name = 1;
    string key_name = 2;
    string team_name = 3; // OU
}

message ApiKey {
    string service_name = 1;
    string key_name = 2;
    string key = 3;
    string team_name = 4; // OU
}

message ApiKeyList {
    repeated ApiKey key = 1;
}
