/**
 * Copyright (C) 2018 Nordstrom, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "apikey_models.proto";
import "google/protobuf/empty.proto";

package nordstrom.gtm.coredb;

option java_multiple_files = true;
option java_package = "com.nordstrom.gtm.coredb";
option java_outer_classname = "CoreDbApiKeyProto";

message ListApiKeysRequest {
  string service_name = 1;
}

message ListApiKeysResponse {
  repeated .nordstrom.gtm.apikey.ApiKey api_keys = 1;
}

message DeleteApiKeyRequest {
  string key = 1;
}

service ApiKey {
  rpc SaveApiKey (.nordstrom.gtm.apikey.ApiKey) returns (google.protobuf.Empty);
  rpc ListApiKeys (ListApiKeysRequest) returns (ListApiKeysResponse);
  rpc DeleteApiKey (DeleteApiKeyRequest) returns (google.protobuf.Empty);
}
